Refiement to game logic. Update to HMTL & CSS.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <!-- attack Btn -->
     <div class="btn">
-      <button class="attack">Attack?</button>
+      <button class="startGame">Start</button>
     </div>
 
     <!-- Status Info -->
