pushed js to html

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <!-- attack Btn -->
     <div class="btn">
       <button class="startGame">Start</button>
+      <button class="attackBtnHdn">ATTACK!</button>
+      <button class="retreatBtnHdn"> Escape</button>
     </div>
 
     <!-- Status Info -->
