minor update to js to html implementation.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <div class="logo">
       <h1 class="title">Battles in Space Inc.</h1>
     </div>
-
+    <div class="message"></div>
     <!-- Main Screen -->
     <div class="mainScreen">
+      
       <!-- Left side | Alien -->
       <div class="leftBox"></div>
       
